# distributed-demos

./: README.md
Zookeeper Basic Leader Selection Algorithm/zookeeper-leader-election/: pom.xml
Zookeeper Basic Leader Selection Algorithm/zookeeper-leader-election/src/main/java/com/github/canetizen/zookeeper_leader_election/: LeaderElectionApp.java
Zookeeper Basic Leader Selection Algorithm/zookeeper-leader-election/src/main/java/com/github/canetizen/zookeeper_leader_election/service/: DefaultLeaderHandler.java
cyclonedds-discovery-simulation/: Makefile  docker-compose.yml
cyclonedds-discovery-simulation/node/: CMakeLists.txt  Dockerfile  main.cpp
cyclonedds-discovery-simulation/shared/: SensorData.idl  cyclonedds.xml
kafka-failover-simulation/: .gitignore
zookeeper-leader-election-algorithm/: pom.xml
zookeeper-leader-election-algorithm/src/main/java/com/github/canetizen/zookeeper_leader_election_algorithm/: LeaderElectionApp.java
zookeeper-leader-election-algorithm/src/main/java/com/github/canetizen/zookeeper_leader_election_algorithm/impl/: LeaderElectionClient.java
zookeeper-leader-election-algorithm/src/main/java/com/github/canetizen/zookeeper_leader_election_algorithm/service/: DefaultLeaderHandler.java  LeaderElectionHandler.java
zookeeper_leader_election_algorithm/zookeeper-leader-election/: .gitignore
zookeeper_leader_election_algorithm/zookeeper-leader-election/src/main/java/com/github/canetizen/zookeeper_leader_election/service/: LeaderElectionHandler.java
